grammar.js
        source_file: ($) => repeat($._top_level_item),

        _top_level_item: ($) =>
            choice(
                // Sections
                $.section,

                // Headers
                $.program_name,
                $.module_name,

                // Functions, Calls, and Modules Definitions
                $.define_function,
                $.define_call,
                $.define_module,

                // Top-Level Declarations
                $.declaration,
                $.type_definition,
                $.event_definition,

                // Statements
                $._top_level_statement,

                // Preprocessor
                $.preproc_if_defined,
                $.preproc_if_not_defined,
                $.preproc_define,
                $.preproc_include,
                $.preproc_warn,
                $.preproc_disable_warning,
            ),

        program_name: ($) =>
            prec.right(
                PREC.DIRECTIVE + 10,
                seq($.program_name_keyword, "=", $.string_literal),
            ),

        section: ($) =>
            choice(
                $.define_device_section,
                $.define_combine_section,
                $.define_connect_level_section,
                $.define_constant_section,
                $.define_type_section,
                $.define_mutually_exclusive_section,
                $.define_latching_section,
                $.define_toggling_section,
                $.define_variable_section,
                $.define_system_variable_section,
                $.define_start_section,
                $.define_event_section,
                $.define_program_section,
            ),

        define_device_section: ($) => $.define_device_keyword,
        define_constant_section: ($) => $.define_constant_keyword,
        define_mutually_exclusive_section: ($) =>
            $.define_mutually_exclusive_keyword,
        define_latching_section: ($) => $.define_latching_keyword,
        define_toggling_section: ($) => $.define_toggling_keyword,
        init_declarator: ($) =>
            seq(
                field("declarator", $._declarator),
                "=",
                field("value", choice($.initializer_list, $.expression)),
            ),

        intrinsic_type: ($) => choice($.primitive_type, $.structured_type),

        primitive_type: ($) =>
            choice(
                $.char_keyword,
                $.widechar_keyword,
                $.integer_keyword,
                $.sinteger_keyword,
                $.long_keyword,
                $.slong_keyword,
                $.float_keyword,
                $.double_keyword,
                $.variant_keyword,
                $.variantarray_keyword,
            ),

        declaration: ($) =>
            prec.right(
                seq(
                    choice(
                        // Regular declaration with custom type
                        prec.right(
                            10,
                            seq(
                                $._declaration_specifiers,
                                alias($.identifier, $.type_identifier),
                                commaSep1(
                                    field(
                                        "declarator",
                                        choice(
                                            seq($._declaration_declarator),
                                            $.init_declarator,
                                        ),
                                    ),
                                ),
                            ),
                        ),

                        // Custom type with qualifier only
                        prec.right(
                            10,
                            seq(
                                $.type_qualifier,
                                alias($.identifier, $.type_identifier),
                                commaSep1(
                                    field(
                                        "declarator",
                                        choice(
                                            seq($._declaration_declarator),
                                            $.init_declarator,
                                        ),
                                    ),
                                ),
                            ),
                        ),

                        // Custom type with storage class only
                        prec.right(
                            10,
                            seq(
                                $.storage_class_specifier,
                                alias($.identifier, $.type_identifier),
                                commaSep1(
                                    field(
                                        "declarator",
                                        choice(
                                            seq($._declaration_declarator),
                                            $.init_declarator,
                                        ),
                                    ),
                                ),
                            ),
                        ),

                        // Regular declaration
                        prec.right(
                            1,
                            seq(
                                $._declaration_specifiers,
                                commaSep1(
                                    field(
                                        "declarator",
                                        choice(
                                            seq($._declaration_declarator),
                                            $.init_declarator,
                                        ),
                                    ),
                                ),
                            ),
                        ),

                        // Qualifier only
                        prec.right(
                            2,
                            seq(
                                $.type_qualifier,
                                commaSep1(
                                    field(
                                        "declarator",
                                        choice(
                                            seq($._declaration_declarator),
                                            $.init_declarator,
                                        ),
                                    ),
                                ),
                            ),
                        ),

                        // Storage class only
                        prec.right(
                            3,
                            seq(
                                $.storage_class_specifier,
                                commaSep1(
                                    field(
                                        "declarator",
                                        choice(
                                            seq($._declaration_declarator),
                                            $.init_declarator,
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    $._semicolon,
                ),
            ),

        _declaration_specifiers: ($) =>
            prec.right(
                seq(
                    repeat($._declaration_modifiers),
                    field("type", $.type_specifier),
                    repeat($._declaration_modifiers),
                ),
            ),

        _declarator: ($) =>
            choice(
                $.function_declarator,
                $.array_declarator,
                $.parenthesized_declarator,
                $.identifier,
            ),

        _declaration_declarator: ($) =>
            choice(
                alias(
                    $._function_declaration_declarator,
                    $.function_declarator,
                ),
                $.array_declarator,
                $.parenthesized_declarator,
                $.identifier,
            ),

        expression_statement: ($) =>
            choice(seq(choice($.expression, $.comma_expression), $._semicolon)),

        expression: ($) =>
            choice($._expression_not_binary, $.binary_expression),

        _expression_not_binary: ($) =>
            choice(
                $.assignment_expression,
                $.unary_expression,
                $.update_expression,
                $.call_expression,
                $.field_expression,
                $.subscript_expression,
                $.string_expression,
                $.identifier,
                $.number_literal,
                $.string_literal,
                $.true,
                $.false,
                $.compiler_variable,
                $.device_literal,
                $.parenthesized_expression,
                $.devchan_range_expression,
                $.devchan_expression,
            ),

        assignment_expression: ($) =>
            prec.right(
                PREC.ASSIGNMENT,
                seq(
                    field("left", $._assignment_left_expression),
                    field("operator", "="),
                    field("right", $.expression),
                ),
            ),

        _assignment_left_expression: ($) =>
            choice(
                $.identifier,
                $.call_expression,
                $.field_expression,
                $.subscript_expression,
                $.parenthesized_expression,
                $.devchan_expression,
            ),

        comma_expression: ($) =>
            prec.right(
                PREC.DEFAULT,
                seq(
                    field("left", $.expression),
                    ",",
                    field("right", choice($.expression, $.comma_expression)),
                ),
            ),

        parenthesized_expression: ($) =>
            seq(
                "(",
                choice($.expression, $.comma_expression, $.compound_statement),
                ")",
            ),

        devchan_expression: ($) =>
            prec.dynamic(
                PREC.FIELD + 12,
                seq(
                    token("["),
                    field("device", $.expression),
                    ",",
                    field("channel", $.expression),
                    "]",
                ),
            ),

        devchan_range_expression: ($) =>
            prec.dynamic(
                PREC.FIELD,
                seq(
                    field("start", $.devchan_expression),
                    $.range_operator,
                    field("end", $.devchan_expression),
                ),
            ),

        range_operator: (_) => token(".."),

        // String Expressions in NetLinx are like interpolated strings
        // or string template literals in other languages.
        initializer_list: ($) =>
            seq(
                "{",
                repeat(
                    choice(
                        seq(choice($.expression, $.initializer_list), ","),
                        alias(
                            $.preproc_if_defined_in_initializer_list,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_initializer_list,
                            $.preproc_if_not_defined,
                        ),
                        alias(
                            $.preproc_if_defined_in_initializer_list_no_comma,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_initializer_list_no_comma,
                            $.preproc_if_not_defined,
                        ),
                        seq(
                            choice($.expression, $.initializer_list),
                            optional(","),
                        ),
                    ),
                ),
                optional(
                    choice(
                        $.expression,
                        $.initializer_list,
                        alias(
                            $.preproc_if_defined_in_initializer_list_no_comma,
                            $.preproc_if_defined,
                        ),
                        alias(
                            $.preproc_if_not_defined_in_initializer_list_no_comma,
                            $.preproc_if_not_defined,
                        ),
                    ),
                ),
                "}",
            ),

        literal: ($) =>
            choice($.number_literal, $.string_literal, $.device_literal),

        device_literal: ($) =>
            prec.dynamic(
                PREC.FIELD + 30,
                seq(
                    field("device", $.expression),
                    ":",
                    field("port", $.expression),
                    ":",
                    field("system", $.expression),
                ),
            ),

        string_literal: ($) =>
            seq(
                "'",
                repeat(
                    choice(
                        alias(
                            token.immediate(prec(1, /[^'\n]+/)),
                            $.string_content,
                        ),
                        $.escape_sequence,
                    ),
                ),
                "'",
            ),

        number_literal: (_) => {
            return token(
                choice(
                    // Hexadecimal literals
                    /\$[0-9a-fA-F]+/,

                    // Floating point with scientific notation
                    seq(
                        optional(/[-+]/),
                        choice(
                            // Format: digits.digits
                            seq(/\d+/, ".", optional(/\d+/)),
                            // Format: .digits
                            seq(".", /\d+/),
                            // Format: digits (integers)
                            /\d+/,
                        ),
                        // Optional scientific notation
                        optional(seq(/[eE]/, optional(/[-+]/), /\d+/)),
                    ),
                ),
            );
        },

        identifier: (_) => /[_a-zA-Z][_a-zA-Z0-9]*/,

        comment: (_) =>
            token(
                choice(
                    seq("//", /(\\+(.|\r?\n)|[^\\\n])*/), // Single-line comments
                    seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"), // C-style multi-line comments

                    // Adding choice for Pascal-style comment endings
                    // This is to support this odd use case in the NetLinx.axi file
                    seq("(*", /[^*]*\*+(?:[^)*/][^*]*\*+)*/, choice(")", "/")), // Pascal-style comments
                ),
            ),
