test/corpus/constants.txt
==================
Basic Constants
==================

DEFINE_CONSTANT
INTEGER MY_CONSTANT = 100
CHAR CH_CONSTANT = 'A'
INTEGER ARRAY_SIZE = 10

---

(source_file
  (section
    (define_constant_section
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        value: (literal
          (number_literal
            (decimal_literal))))
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        value: (string_literal
          (string_content)))
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        value: (literal
          (number_literal
            (decimal_literal)))))))

==================
Array Constants
==================

DEFINE_CONSTANT
INTEGER DAYS[] = { 1, 2, 3, 4, 5, 6, 7 }
CHAR NAMES[2][10] = {{ 'User1', 'User2' }}

---

(source_file
  (section
    (define_constant_section
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        dimensions: (array_dimension)
        value: (initializer_list
          (literal
            (number_literal
              (decimal_literal)))
          (literal
            (number_literal
              (decimal_literal)))
          (literal
            (number_literal
              (decimal_literal)))
          (literal
            (number_literal
              (decimal_literal)))
          (literal
            (number_literal
              (decimal_literal)))
          (literal
            (number_literal
              (decimal_literal)))
          (literal
            (number_literal
              (decimal_literal)))))
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        dimensions: (array_dimension
          size: (literal
            (number_literal
              (decimal_literal)))
          size: (literal
            (number_literal
              (decimal_literal))))
        value: (initializer_list
          (initializer_list
            (literal
              (string_literal
                (string_content)))
            (literal
              (string_literal
                (string_content)))))))))

==================
Constants with Qualifiers
==================

DEFINE_CONSTANT
CONSTANT INTEGER MAX_VALUE = 1000
CONSTANT INTEGER COUNTER = 0

---

(source_file
  (section
    (define_constant_section
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        value: (literal
          (number_literal
            (decimal_literal))))
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        value: (literal
          (number_literal
            (decimal_literal)))))))

==================
Hex Constants
==================

DEFINE_CONSTANT
INTEGER HEX_VALUE = $FF
INTEGER RGB_COLOR = $00FFCC

---

(source_file
  (section
    (define_constant_section
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        value: (literal
          (number_literal
            (hex_literal))))
      (constant_definition
        type: (primitive_type
          (intrinsic_type))
        name: (identifier)
        value: (literal
          (number_literal
            (hex_literal)))))))
